--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   </div>
 
   <section class="white-section">
-    <img src="6817fee6-e972-4b1d-b5ee-9e1a5322674f.png" alt="Infinite Powers Book">
+    <img src="image.png" alt="Infinite Powers Book">
     <div class="description">
       <h2>Infinite Powers</h2>
       <p>
@@ -141,7 +141,7 @@
   </section>
 
   <section class="red-section">
-    <img src="image.png" alt="Joy of x">
+    <img src="joy.png" alt="Joy of x">
     <div class="description">
       <h2>Joy of X</h2>
       <p>
