--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   </div>
 
   <section class="white-section">
-    <img src="image.png" alt="Infinite Powers Book">
+    <img src="power.png" alt="Infinite Powers Book">
     <div class="description">
       <h2>Infinite Powers</h2>
       <p>
