--- a/index.html
+++ b/index.html
@@ -150,6 +150,21 @@
       </p>
     </div>
   </section>
+  <section class="white-section">
+    <img src="truth.png" alt="The Truth Detective">
+    <div class="description">
+      <h2>The Truth Detective</h2>
+      <p>
+        "The Truth Detective" by Tim Harford is a compelling and accessible guide to critical thinking and spotting 
+         misinformation in the modern world. Using engaging stories, real-life examples, 
+         and insights from economics and statistics, Harford teaches readers how to think clearly, question 
+         assumptions, and separate truth from lies in an age of information overload. It’s a practical and 
+         entertaining toolkit for anyone who wants to become more rational and discerning in their everyday decisions.
+
+
+      </p>
+    </div>
+  </section>
 
   <footer>
     All rights reserved © Knowledge Seeker 2025
