--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </div>
   </section>
   <section class="white-section">
-    <img src="truth.png" alt="The Truth Detective">
+    <img src="truth.jpg" alt="The Truth Detective">
     <div class="description">
       <h2>The Truth Detective</h2>
       <p>
