--- a/index.html
+++ b/index.html
@@ -1,92 +1,48 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Knowledge Seeker</title>
+  <title>fantasticasd.github.io</title>
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
     body {
-      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #ffffff;
       color: #333;
     }
 
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px 40px;
-      background-color: #2c3e50;
+    .hero {
+      background: linear-gradient(to right, #8e44ad, #c0392b);
       color: white;
+      text-align: center;
+      padding: 100px 20px;
     }
 
-    .site-name {
+    .hero h1 {
+      font-size: 3.5em;
+      margin-bottom: 10px;
+    }
+
+    .hero p {
       font-size: 1.5em;
-      font-weight: bold;
     }
 
-    .menu-button {
-      font-size: 1.2em;
-      cursor: pointer;
-      background: none;
-      border: none;
-      color: white;
-    }
-
-    .sidebar {
-      position: fixed;
-      top: 0;
-      right: -300px;
-      height: 100%;
-      width: 300px;
-      background-color: #ecf0f1;
-      box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
-      transition: right 0.3s ease-in-out;
-      padding: 20px;
-    }
-
-    .sidebar.open {
-      right: 0;
-    }
-
-    .sidebar h3 {
-      margin-bottom: 15px;
-    }
-
-    .sidebar ul {
-      list-style: none;
-    }
-
-    .sidebar ul li {
-      margin: 10px 0;
-    }
-
-    section {
+    .main-section {
       display: flex;
       flex-wrap: wrap;
       align-items: center;
       justify-content: center;
-      padding: 60px 30px;
+      padding: 40px;
       gap: 40px;
-      min-height: 100vh;
+      background-color: #fff;
     }
 
-    .white-section {
-      background-color: #ffffff;
-    }
-
-    .red-section {
-      background-color: #e74c3c;
+    .alt-section {
+      background-color: #c0392b;
       color: white;
     }
 
-    section img {
+    .main-section img {
       width: 300px;
       max-width: 90%;
       border-radius: 10px;
@@ -99,81 +55,127 @@
       line-height: 1.6;
     }
 
+    .description h2 {
+      color: inherit;
+      margin-bottom: 10px;
+    }
+
     footer {
+      background-color: #222;
+      color: white;
       text-align: center;
       padding: 20px;
-      background-color: #2c3e50;
+      font-size: 0.9em;
+    }
+
+    .menu {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+    }
+
+    .menu button {
+      font-size: 24px;
+      background: none;
+      border: none;
       color: white;
+      cursor: pointer;
+    }
+
+    .sidebar {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 250px;
+      height: 100%;
+      background-color: #333;
+      color: white;
+      padding: 20px;
+      z-index: 1000;
+    }
+
+    .sidebar a {
+      display: block;
+      color: white;
+      text-decoration: none;
+      margin: 10px 0;
+    }
+
+    .show-sidebar {
+      display: block;
     }
 
     @media (max-width: 768px) {
-      section {
+      .main-section {
         flex-direction: column;
+        padding: 20px;
+      }
+
+      .description {
+        text-align: center;
       }
     }
   </style>
 </head>
 <body>
-  <header>
-    <div class="site-name">Knowledge Seeker</div>
-    <button class="menu-button" onclick="toggleSidebar()">☰</button>
-  </header>
 
-  <div class="sidebar" id="sidebar">
-    <h3>Explore</h3>
-    <ul>
-      <li>About Me</li>
-      <li>More Books</li>
-      <li>Scholars</li>
-    </ul>
+  <div class="menu">
+    <button onclick="toggleSidebar()">☰</button>
   </div>
 
-  <section class="white-section">
+  <div id="sidebar" class="sidebar">
+    <a href="#">About Me</a>
+    <a href="#">More Books</a>
+    <a href="#">Scholars</a>
+  </div>
+
+  <section class="hero">
+    <h1>Knowledge Seeker</h1>
+    <p>For those who seek truth through learning.</p>
+  </section>
+
+  <section class="main-section">
     <img src="power.png" alt="Infinite Powers Book">
     <div class="description">
       <h2>Infinite Powers</h2>
       <p>
-        This book beautifully reveals how calculus shapes our world, from physics to economics,
-        from medicine to machine learning. Written by Steven Strogatz, it's a journey into how infinitesimals helped
-        humans model change, motion, and reality itself.
+        This book beautifully reveals how calculus shapes our world, from physics to economics, from medicine to machine learning.  
+        Written by the legendary Steven Strogatz, it's a journey into how infinitesimals helped humans model change, motion, and reality itself.
       </p>
     </div>
   </section>
 
-  <section class="red-section">
-    <img src="joy.png" alt="Joy of x">
+  <section class="main-section alt-section">
     <div class="description">
-      <h2>Joy of X</h2>
+      <h2>The Joy of x</h2>
       <p>
-        Dive into the legacy of thinkers who redefined how we understand the universe. This section is dedicated
-        to books that expand your mind and sharpen your thinking.
+        A wonderful introduction to the magic of mathematics in everyday life. With clarity and humor, Strogatz explores how numbers, patterns, and logic are all around us — even in love and politics.
       </p>
     </div>
+    <img src="joy.png" alt="The Joy of x Book">
   </section>
-  <section class="white-section">
-    <img src="truth.png" alt="The Truth Detective">
-    <div class="description">
-      <h2>The Truth Detective</h2>
-      <p>
-        "The Truth Detective" by Tim Harford is a compelling and accessible guide to critical thinking and spotting 
-         misinformation in the modern world. Using engaging stories, real-life examples, 
-         and insights from economics and statistics, Harford teaches readers how to think clearly, question 
-         assumptions, and separate truth from lies in an age of information overload. It’s a practical and 
-         entertaining toolkit for anyone who wants to become more rational and discerning in their everyday decisions.
-
-
-      </p>
-    </div>
-  </section>
+  <section class="main-section">
+  <img src="truth.png" alt="The Truth Detective Book">
+  <div class="description">
+    <h2>The Truth Detective</h2>
+    <p>
+      In a world overflowing with information and misinformation, Tim Harford empowers us to cut through noise and confusion.  
+      This book is a guide for anyone seeking clarity, facts, and rational thinking in today’s complex landscape.
+    </p>
+  </div>
+</section>
 
   <footer>
-    All rights reserved © Knowledge Seeker 2025
+    &copy; 2025 Knowledge Seeker. All rights reserved.
   </footer>
 
   <script>
     function toggleSidebar() {
-      document.getElementById('sidebar').classList.toggle('open');
+      const sidebar = document.getElementById('sidebar');
+      sidebar.classList.toggle('show-sidebar');
     }
   </script>
+
 </body>
 </html>
