--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #ffffff;
       color: #333;
+      overflow-x: hidden;
     }
 
     .hero {
-      background: linear-gradient(to right, #ffcccb, #ffe4e1); /* New light red-pink gradient */
+      background: linear-gradient(to right, #ffcccb, #ffe4e1);
       color: #111;
       text-align: center;
       padding: 100px 20px;
@@ -32,9 +33,17 @@
       flex-wrap: wrap;
       align-items: center;
       justify-content: center;
-      padding: 40px;
+      padding: 60px 40px;
       gap: 40px;
       background-color: #fff;
+      opacity: 0;
+      transform: translateY(40px);
+      transition: all 0.6s ease-out;
+    }
+
+    .main-section.visible {
+      opacity: 1;
+      transform: translateY(0);
     }
 
     .alt-section {
@@ -47,12 +56,28 @@
       max-width: 90%;
       border-radius: 10px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      opacity: 0;
+      transform: translateX(-40px);
+      transition: all 0.6s ease-out;
+    }
+
+    .main-section.visible img {
+      opacity: 1;
+      transform: translateX(0);
     }
 
     .description {
       max-width: 500px;
       font-size: 1.2em;
       line-height: 1.6;
+      opacity: 0;
+      transform: translateX(40px);
+      transition: all 0.6s ease-out;
+    }
+
+    .main-section.visible .description {
+      opacity: 1;
+      transform: translateX(0);
     }
 
     .description h2 {
@@ -69,14 +94,14 @@
     }
 
     .menu {
-      position: absolute;
+      position: fixed;
       top: 20px;
       left: 20px;
       z-index: 1100;
     }
 
     .menu button {
-      font-size: 24px;
+      font-size: 28px;
       background: none;
       border: none;
       color: black;
@@ -84,25 +109,30 @@
     }
 
     .sidebar {
-      display: none;
       position: fixed;
       top: 0;
-      left: 0;
+      left: -250px;
       width: 250px;
       height: 100%;
-      background-color: #fff; /* White background */
+      background-color: #fff;
       color: #333;
-      padding: 20px;
+      padding: 30px 20px;
       z-index: 1000;
       box-shadow: 2px 0 8px rgba(0, 0, 0, 0.2);
+      transition: left 0.3s ease;
     }
 
     .sidebar a {
       display: block;
       color: #333;
       text-decoration: none;
-      margin: 10px 0;
+      margin: 20px 0;
+      font-size: 1.3em;
       font-weight: bold;
+    }
+
+    .sidebar.show-sidebar {
+      left: 0;
     }
 
     .close-btn {
@@ -114,10 +144,6 @@
       top: 10px;
       right: 15px;
       cursor: pointer;
-    }
-
-    .show-sidebar {
-      display: block;
     }
 
     @media (max-width: 768px) {
@@ -197,12 +223,27 @@
       sidebar.classList.remove('show-sidebar');
     });
 
-    const sidebarLinks = document.querySelectorAll('#sidebar a');
-    sidebarLinks.forEach(link => {
+    document.querySelectorAll('#sidebar a').forEach(link => {
       link.addEventListener('click', () => {
         sidebar.classList.remove('show-sidebar');
       });
     });
+
+    // Scroll-based animation
+    function revealOnScroll() {
+      const sections = document.querySelectorAll('.main-section');
+      const triggerBottom = window.innerHeight * 0.85;
+
+      sections.forEach(section => {
+        const boxTop = section.getBoundingClientRect().top;
+        if (boxTop < triggerBottom) {
+          section.classList.add('visible');
+        }
+      });
+    }
+
+    window.addEventListener('scroll', revealOnScroll);
+    window.addEventListener('load', revealOnScroll);
   </script>
 
 </body>
